--- a/module-1/router.ipynb
+++ b/module-1/router.ipynb
@@ -46,38 +46,32 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ebb4fc6e-7c85-4fc8-a4a9-0c7a527c4e5b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%capture --no-stderr\n",
-    "%pip install --quiet -U langchain_openai langchain_core langgraph"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
    "id": "885e92d9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os, getpass\n",
+    "import os\n",
     "\n",
-    "def _set_env(var: str):\n",
-    "    if not os.environ.get(var):\n",
-    "        os.environ[var] = getpass.getpass(f\"{var}: \")\n",
-    "\n",
-    "_set_env(\"OPENAI_API_KEY\")"
+    "os.system(\"azd auth login\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "e3ba4df4-3045-49b1-9299-ced1fce14d24",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from langchain_openai import ChatOpenAI\n",
+    "import os\n",
+    "from azure.identity import DefaultAzureCredential, get_bearer_token_provider\n",
+    "from langchain_openai import AzureChatOpenAI\n",
+    "from dotenv import load_dotenv\n",
+    "load_dotenv()\n",
+    "\n",
+    "credential = DefaultAzureCredential()\n",
+    "scope = \"https://cognitiveservices.azure.com/.default\"\n",
+    "token_provider = get_bearer_token_provider(credential, scope)\n",
+    "\n",
     "\n",
     "def multiply(a: int, b: int) -> int:\n",
     "    \"\"\"Multiply a and b.\n",
@@ -88,7 +82,20 @@
     "    \"\"\"\n",
     "    return a * b\n",
     "\n",
-    "llm = ChatOpenAI(model=\"gpt-4o\")\n",
+    "\n",
+    "llm =AzureChatOpenAI(\n",
+    "        azure_endpoint=os.getenv(\"AZURE_ENDPOINT\"),\n",
+    "        azure_deployment=os.getenv(\"AZURE_DEPLOYMENT\"),\n",
+    "        api_version=os.getenv(\"API_VERSION\"),\n",
+    "        azure_ad_token_provider=token_provider,\n",
+    "        openai_api_type=os.getenv(\"OPENAI_API_TYPE\"),\n",
+    "        model=os.getenv(\"MODEL\"),\n",
+    "        temperature=0.0,\n",
+    "        streaming=False,\n",
+    "        callbacks=[],\n",
+    "        verbose=False,\n",
+    "        timeout=120,\n",
+    "    )\n",
     "llm_with_tools = llm.bind_tools([multiply])"
    ]
   },
@@ -104,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "9a6fde4e-cceb-4426-b770-97ee4b41e9da",
    "metadata": {},
    "outputs": [
@@ -150,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "11b608c5-0c15-4fb7-aa24-80ce5774fb85",
    "metadata": {},
    "outputs": [
@@ -160,10 +167,18 @@
      "text": [
       "================================\u001b[1m Human Message \u001b[0m=================================\n",
       "\n",
-      "Hello world.\n",
+      "Hello, what is 2 multiplied by 2?\n",
       "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
+      "Tool Calls:\n",
+      "  multiply (call_PsnMkJl05gjaPcalzhudxwpp)\n",
+      " Call ID: call_PsnMkJl05gjaPcalzhudxwpp\n",
+      "  Args:\n",
+      "    a: 2\n",
+      "    b: 2\n",
+      "=================================\u001b[1m Tool Message \u001b[0m=================================\n",
+      "Name: multiply\n",
       "\n",
-      "Hello! How can I assist you today?\n"
+      "4\n"
      ]
     }
    ],
@@ -208,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "43782c33-0f41-47f2-ae38-ddb2cd4ba6f8",
    "metadata": {},
    "outputs": [],
