--- a/module-2/chatbot-external-memory.ipynb
+++ b/module-2/chatbot-external-memory.ipynb
@@ -34,29 +34,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "85ed78d9-6ca2-45ac-96a9-52e341ec519d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%capture --no-stderr\n",
-    "%pip install --quiet -U langgraph-checkpoint-sqlite langchain_core langgraph langchain_openai"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2e10c4d4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os, getpass\n",
+    "import os\n",
     "\n",
-    "def _set_env(var: str):\n",
-    "    if not os.environ.get(var):\n",
-    "        os.environ[var] = getpass.getpass(f\"{var}: \")\n",
-    "\n",
-    "_set_env(\"OPENAI_API_KEY\")"
+    "os.system(\"azd auth login\")"
    ]
   },
   {
@@ -75,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "fae15402-17ae-4e89-8ecf-4c89e08b22fe",
    "metadata": {},
    "outputs": [],
@@ -114,7 +99,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Here is our checkpointer \n",
+    "# Here is our checkpointer\n",
     "from langgraph.checkpoint.sqlite import SqliteSaver\n",
     "memory = SqliteSaver(conn)"
    ]
@@ -129,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "dc414e29-2078-41a0-887c-af1a6a3d72c0",
    "metadata": {},
    "outputs": [],
@@ -147,61 +132,61 @@
     "\n",
     "# Define the logic to call the model\n",
     "def call_model(state: State):\n",
-    "    \n",
+    "\n",
     "    # Get summary if it exists\n",
     "    summary = state.get(\"summary\", \"\")\n",
     "\n",
     "    # If there is summary, then we add it\n",
     "    if summary:\n",
-    "        \n",
+    "\n",
     "        # Add summary to system message\n",
     "        system_message = f\"Summary of conversation earlier: {summary}\"\n",
     "\n",
     "        # Append summary to any newer messages\n",
     "        messages = [SystemMessage(content=system_message)] + state[\"messages\"]\n",
-    "    \n",
+    "\n",
     "    else:\n",
     "        messages = state[\"messages\"]\n",
-    "    \n",
+    "\n",
     "    response = model.invoke(messages)\n",
     "    return {\"messages\": response}\n",
     "\n",
     "def summarize_conversation(state: State):\n",
-    "    \n",
+    "\n",
     "    # First, we get any existing summary\n",
     "    summary = state.get(\"summary\", \"\")\n",
     "\n",
-    "    # Create our summarization prompt \n",
+    "    # Create our summarization prompt\n",
     "    if summary:\n",
-    "        \n",
+    "\n",
     "        # A summary already exists\n",
     "        summary_message = (\n",
     "            f\"This is summary of the conversation to date: {summary}\\n\\n\"\n",
     "            \"Extend the summary by taking into account the new messages above:\"\n",
     "        )\n",
-    "        \n",
+    "\n",
     "    else:\n",
     "        summary_message = \"Create a summary of the conversation above:\"\n",
     "\n",
     "    # Add prompt to our history\n",
     "    messages = state[\"messages\"] + [HumanMessage(content=summary_message)]\n",
     "    response = model.invoke(messages)\n",
-    "    \n",
+    "\n",
     "    # Delete all but the 2 most recent messages\n",
     "    delete_messages = [RemoveMessage(id=m.id) for m in state[\"messages\"][:-2]]\n",
     "    return {\"summary\": response.content, \"messages\": delete_messages}\n",
     "\n",
     "# Determine whether to end or summarize the conversation\n",
     "def should_continue(state: State):\n",
-    "    \n",
+    "\n",
     "    \"\"\"Return the next node to execute.\"\"\"\n",
-    "    \n",
+    "\n",
     "    messages = state[\"messages\"]\n",
-    "    \n",
+    "\n",
     "    # If there are more than six messages, then we summarize the conversation\n",
     "    if len(messages) > 6:\n",
     "        return \"summarize_conversation\"\n",
-    "    \n",
+    "\n",
     "    # Otherwise we can just end\n",
     "    return END"
    ]
@@ -260,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "0f4094a0-d240-4be8-903a-7d9f605bdc5c",
    "metadata": {},
    "outputs": [
@@ -302,17 +287,17 @@
     "\n",
     "# Start conversation\n",
     "input_message = HumanMessage(content=\"hi! I'm Lance\")\n",
-    "output = graph.invoke({\"messages\": [input_message]}, config) \n",
+    "output = graph.invoke({\"messages\": [input_message]}, config)\n",
     "for m in output['messages'][-1:]:\n",
     "    m.pretty_print()\n",
     "\n",
     "input_message = HumanMessage(content=\"what's my name?\")\n",
-    "output = graph.invoke({\"messages\": [input_message]}, config) \n",
+    "output = graph.invoke({\"messages\": [input_message]}, config)\n",
     "for m in output['messages'][-1:]:\n",
     "    m.pretty_print()\n",
     "\n",
     "input_message = HumanMessage(content=\"i like the 49ers!\")\n",
-    "output = graph.invoke({\"messages\": [input_message]}, config) \n",
+    "output = graph.invoke({\"messages\": [input_message]}, config)\n",
     "for m in output['messages'][-1:]:\n",
     "    m.pretty_print()"
    ]
@@ -396,7 +381,7 @@
     "Since the filming of these videos, we've updated Studio so that it can be run locally and opened in your browser. This is now the preferred way to run Studio (rather than using the Desktop App as shown in the video). See documentation [here](https://langchain-ai.github.io/langgraph/concepts/langgraph_studio/#local-development-server) on the local development server and [here](https://langchain-ai.github.io/langgraph/how-tos/local-studio/#run-the-development-server). To start the local development server, run the following command in your terminal in the `/studio` directory in this module:\n",
     "\n",
     "```\n",
-    "langgraph dev\n",
+    "uv run langgraph dev\n",
     "```\n",
     "\n",
     "Yoo should see the following output:\n",
@@ -418,7 +403,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -432,7 +417,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
