--- a/module-2/chatbot-summarization.ipynb
+++ b/module-2/chatbot-summarization.ipynb
@@ -41,24 +41,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%capture --no-stderr\n",
-    "%pip install --quiet -U langchain_core langgraph langchain_openai"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "09201a62",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os, getpass\n",
+    "import os\n",
     "\n",
-    "def _set_env(var: str):\n",
-    "    if not os.environ.get(var):\n",
-    "        os.environ[var] = getpass.getpass(f\"{var}: \")\n",
-    "\n",
-    "_set_env(\"OPENAI_API_KEY\")"
+    "os.system(\"azd auth login\")"
    ]
   },
   {
@@ -71,11 +56,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "464856d4",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os, getpass\n",
+    "\n",
+    "\n",
+    "def _set_env(var: str):\n",
+    "    if not os.environ.get(var):\n",
+    "        os.environ[var] = getpass.getpass(f\"{var}: \")\n",
+    "\n",
+    "\n",
     "_set_env(\"LANGCHAIN_API_KEY\")\n",
     "os.environ[\"LANGCHAIN_TRACING_V2\"] = \"true\"\n",
     "os.environ[\"LANGCHAIN_PROJECT\"] = \"langchain-academy\""
@@ -83,13 +76,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "537ade30-6a0e-4b6b-8bcd-ce90790b6392",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from langchain_openai import ChatOpenAI\n",
-    "model = ChatOpenAI(model=\"gpt-4o\",temperature=0)"
+    "import os\n",
+    "from azure.identity import DefaultAzureCredential, get_bearer_token_provider\n",
+    "from langchain_openai import AzureChatOpenAI\n",
+    "from dotenv import load_dotenv\n",
+    "\n",
+    "load_dotenv()\n",
+    "\n",
+    "credential = DefaultAzureCredential()\n",
+    "scope = \"https://cognitiveservices.azure.com/.default\"\n",
+    "token_provider = get_bearer_token_provider(credential, scope)\n",
+    "\n",
+    "model = AzureChatOpenAI(\n",
+    "    azure_endpoint=os.getenv(\"AZURE_ENDPOINT\"),\n",
+    "    azure_deployment=os.getenv(\"AZURE_DEPLOYMENT\"),\n",
+    "    api_version=os.getenv(\"API_VERSION\"),\n",
+    "    azure_ad_token_provider=token_provider,\n",
+    "    openai_api_type=os.getenv(\"OPENAI_API_TYPE\"),\n",
+    "    model=os.getenv(\"MODEL\"),\n",
+    "    temperature=0.0,\n",
+    "    streaming=False,\n",
+    "    callbacks=[],\n",
+    "    verbose=False,\n",
+    "    timeout=120,\n",
+    ")\n"
    ]
   },
   {
@@ -104,12 +119,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "948e60f0-5c76-4235-b40e-cf523205d40e",
    "metadata": {},
    "outputs": [],
    "source": [
     "from langgraph.graph import MessagesState\n",
+    "\n",
+    "\n",
     "class State(MessagesState):\n",
     "    summary: str"
    ]
@@ -124,31 +141,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "c3f7d19b-afe0-4381-9b1a-0a832b162e7b",
    "metadata": {},
    "outputs": [],
    "source": [
     "from langchain_core.messages import SystemMessage, HumanMessage, RemoveMessage\n",
     "\n",
+    "\n",
     "# Define the logic to call the model\n",
     "def call_model(state: State):\n",
-    "    \n",
     "    # Get summary if it exists\n",
     "    summary = state.get(\"summary\", \"\")\n",
     "\n",
     "    # If there is summary, then we add it\n",
     "    if summary:\n",
-    "        \n",
     "        # Add summary to system message\n",
     "        system_message = f\"Summary of conversation earlier: {summary}\"\n",
     "\n",
     "        # Append summary to any newer messages\n",
     "        messages = [SystemMessage(content=system_message)] + state[\"messages\"]\n",
-    "    \n",
+    "\n",
     "    else:\n",
     "        messages = state[\"messages\"]\n",
-    "    \n",
+    "\n",
     "    response = model.invoke(messages)\n",
     "    return {\"messages\": response}"
    ]
@@ -165,32 +181,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "78c7aa59-3760-4e76-93f1-bc713e3ec39e",
    "metadata": {},
    "outputs": [],
    "source": [
     "def summarize_conversation(state: State):\n",
-    "    \n",
     "    # First, we get any existing summary\n",
     "    summary = state.get(\"summary\", \"\")\n",
     "\n",
-    "    # Create our summarization prompt \n",
+    "    # Create our summarization prompt\n",
     "    if summary:\n",
-    "        \n",
     "        # A summary already exists\n",
     "        summary_message = (\n",
     "            f\"This is summary of the conversation to date: {summary}\\n\\n\"\n",
     "            \"Extend the summary by taking into account the new messages above:\"\n",
     "        )\n",
-    "        \n",
+    "\n",
     "    else:\n",
     "        summary_message = \"Create a summary of the conversation above:\"\n",
     "\n",
     "    # Add prompt to our history\n",
     "    messages = state[\"messages\"] + [HumanMessage(content=summary_message)]\n",
     "    response = model.invoke(messages)\n",
-    "    \n",
+    "\n",
     "    # Delete all but the 2 most recent messages\n",
     "    delete_messages = [RemoveMessage(id=m.id) for m in state[\"messages\"][:-2]]\n",
     "    return {\"summary\": response.content, \"messages\": delete_messages}"
@@ -206,23 +220,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "b507665d-7f5d-442a-b498-218c94c5dd8b",
    "metadata": {},
    "outputs": [],
    "source": [
     "from langgraph.graph import END\n",
+    "\n",
+    "\n",
     "# Determine whether to end or summarize the conversation\n",
     "def should_continue(state: State):\n",
-    "    \n",
     "    \"\"\"Return the next node to execute.\"\"\"\n",
-    "    \n",
+    "\n",
     "    messages = state[\"messages\"]\n",
-    "    \n",
+    "\n",
     "    # If there are more than six messages, then we summarize the conversation\n",
     "    if len(messages) > 6:\n",
     "        return \"summarize_conversation\"\n",
-    "    \n",
+    "\n",
     "    # Otherwise we can just end\n",
     "    return END"
    ]
@@ -310,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "2566c93b-13e6-4a53-bc0f-b00fff691d30",
    "metadata": {},
    "outputs": [
@@ -336,18 +351,18 @@
     "\n",
     "# Start conversation\n",
     "input_message = HumanMessage(content=\"hi! I'm Lance\")\n",
-    "output = graph.invoke({\"messages\": [input_message]}, config) \n",
-    "for m in output['messages'][-1:]:\n",
+    "output = graph.invoke({\"messages\": [input_message]}, config)\n",
+    "for m in output[\"messages\"][-1:]:\n",
     "    m.pretty_print()\n",
     "\n",
     "input_message = HumanMessage(content=\"what's my name?\")\n",
-    "output = graph.invoke({\"messages\": [input_message]}, config) \n",
-    "for m in output['messages'][-1:]:\n",
+    "output = graph.invoke({\"messages\": [input_message]}, config)\n",
+    "for m in output[\"messages\"][-1:]:\n",
     "    m.pretty_print()\n",
     "\n",
     "input_message = HumanMessage(content=\"i like the 49ers!\")\n",
-    "output = graph.invoke({\"messages\": [input_message]}, config) \n",
-    "for m in output['messages'][-1:]:\n",
+    "output = graph.invoke({\"messages\": [input_message]}, config)\n",
+    "for m in output[\"messages\"][-1:]:\n",
     "    m.pretty_print()"
    ]
   },
@@ -371,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "91b82aaa-17f9-49e2-9528-f4b22e23ebcb",
    "metadata": {},
    "outputs": [
@@ -387,7 +402,7 @@
     }
    ],
    "source": [
-    "graph.get_state(config).values.get(\"summary\",\"\")"
+    "graph.get_state(config).values.get(\"summary\", \"\")"
    ]
   },
   {
@@ -400,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "24b34f0f-62ef-4008-8e96-480cbe92ea3e",
    "metadata": {},
    "outputs": [
@@ -423,15 +438,17 @@
     }
    ],
    "source": [
-    "input_message = HumanMessage(content=\"i like Nick Bosa, isn't he the highest paid defensive player?\")\n",
-    "output = graph.invoke({\"messages\": [input_message]}, config) \n",
-    "for m in output['messages'][-1:]:\n",
+    "input_message = HumanMessage(\n",
+    "    content=\"i like Nick Bosa, isn't he the highest paid defensive player?\"\n",
+    ")\n",
+    "output = graph.invoke({\"messages\": [input_message]}, config)\n",
+    "for m in output[\"messages\"][-1:]:\n",
     "    m.pretty_print()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "22f1b35f-e4bb-47f6-87b1-d84d8aed9aa9",
    "metadata": {},
    "outputs": [
@@ -447,7 +464,7 @@
     }
    ],
    "source": [
-    "graph.get_state(config).values.get(\"summary\",\"\")"
+    "graph.get_state(config).values.get(\"summary\", \"\")"
    ]
   },
   {
@@ -463,7 +480,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -477,7 +494,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
