--- a/module-3/time-travel.ipynb
+++ b/module-3/time-travel.ipynb
@@ -43,8 +43,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%capture --no-stderr\n",
-    "%pip install --quiet -U langgraph langchain_openai langgraph_sdk"
+    "import os\n",
+    "\n",
+    "os.system(\"azd auth login\")"
    ]
   },
   {
@@ -54,13 +55,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os, getpass\n",
+    "import os\n",
+    "from azure.identity import DefaultAzureCredential, get_bearer_token_provider\n",
+    "from langchain_openai import AzureChatOpenAI\n",
+    "from dotenv import load_dotenv\n",
     "\n",
-    "def _set_env(var: str):\n",
-    "    if not os.environ.get(var):\n",
-    "        os.environ[var] = getpass.getpass(f\"{var}: \")\n",
+    "load_dotenv()\n",
     "\n",
-    "_set_env(\"OPENAI_API_KEY\")"
+    "credential = DefaultAzureCredential()\n",
+    "scope = \"https://cognitiveservices.azure.com/.default\"\n",
+    "token_provider = get_bearer_token_provider(credential, scope)\n",
+    "\n",
+    "llm = AzureChatOpenAI(\n",
+    "    azure_endpoint=os.getenv(\"AZURE_ENDPOINT\"),\n",
+    "    azure_deployment=os.getenv(\"AZURE_DEPLOYMENT\"),\n",
+    "    api_version=os.getenv(\"API_VERSION\"),\n",
+    "    azure_ad_token_provider=token_provider,\n",
+    "    openai_api_type=os.getenv(\"OPENAI_API_TYPE\"),\n",
+    "    model=os.getenv(\"MODEL\"),\n",
+    "    temperature=0.0,\n",
+    "    streaming=False,\n",
+    "    callbacks=[],\n",
+    "    verbose=False,\n",
+    "    timeout=120,\n",
+    ")\n"
    ]
   },
   {
@@ -73,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "d64ab3a1-b39c-4176-88c7-791a0b80c725",
    "metadata": {},
    "outputs": [],
@@ -109,7 +127,7 @@
     "    return a / b\n",
     "\n",
     "tools = [add, multiply, divide]\n",
-    "llm = ChatOpenAI(model=\"gpt-4o\")\n",
+    "\n",
     "llm_with_tools = llm.bind_tools(tools)"
    ]
   },
@@ -616,14 +634,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "0b4a918d-858a-41ac-a5d4-e99260e2d6ec",
    "metadata": {},
    "outputs": [],
    "source": [
     "fork_config = graph.update_state(\n",
     "    to_fork.config,\n",
-    "    {\"messages\": [HumanMessage(content='Multiply 5 and 3', \n",
+    "    {\"messages\": [HumanMessage(content='Multiply 5 and 3',\n",
     "                               id=to_fork.values[\"messages\"][0].id)]},\n",
     ")"
    ]
@@ -949,7 +967,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "325e8272",
    "metadata": {},
    "outputs": [
@@ -992,7 +1010,7 @@
     "    input=None,\n",
     "    stream_mode=\"values\",\n",
     "    checkpoint_id=to_replay['checkpoint_id']\n",
-    "):      \n",
+    "):\n",
     "    print(f\"Receiving new event of type: {chunk.event}...\")\n",
     "    print(chunk.data)\n",
     "    print(\"\\n\\n\")"
