--- a/module-4/map-reduce.ipynb
+++ b/module-4/map-reduce.ipynb
@@ -35,8 +35,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%capture --no-stderr\n",
-    "%pip install -U langchain_openai langgraph"
+    "import os\n",
+    "\n",
+    "os.system(\"azd auth login\")"
    ]
   },
   {
@@ -46,13 +47,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os, getpass\n",
-    "\n",
+    "import getpass\n",
     "def _set_env(var: str):\n",
     "    if not os.environ.get(var):\n",
     "        os.environ[var] = getpass.getpass(f\"{var}: \")\n",
     "\n",
-    "_set_env(\"OPENAI_API_KEY\")"
+    "\n",
+    "_set_env(\"LANGCHAIN_API_KEY\")\n",
+    "os.environ[\"LANGCHAIN_TRACING_V2\"] = \"true\"\n",
+    "os.environ[\"LANGCHAIN_PROJECT\"] = \"langchain-academy\""
    ]
   },
   {
@@ -70,9 +73,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "_set_env(\"LANGCHAIN_API_KEY\")\n",
-    "os.environ[\"LANGCHAIN_TRACING_V2\"] = \"true\"\n",
-    "os.environ[\"LANGCHAIN_PROJECT\"] = \"langchain-academy\""
+    "import os\n",
+    "from azure.identity import DefaultAzureCredential, get_bearer_token_provider\n",
+    "from langchain_openai import AzureChatOpenAI\n",
+    "from dotenv import load_dotenv\n",
+    "load_dotenv()\n",
+    "\n",
+    "credential = DefaultAzureCredential()\n",
+    "scope = \"https://cognitiveservices.azure.com/.default\"\n",
+    "token_provider = get_bearer_token_provider(credential, scope)\n",
+    "\n",
+    "llm =AzureChatOpenAI(\n",
+    "        azure_endpoint=os.getenv(\"AZURE_ENDPOINT\"),\n",
+    "        azure_deployment=os.getenv(\"AZURE_DEPLOYMENT\"),\n",
+    "        api_version=os.getenv(\"API_VERSION\"),\n",
+    "        azure_ad_token_provider=token_provider,\n",
+    "        openai_api_type=os.getenv(\"OPENAI_API_TYPE\"),\n",
+    "        model=os.getenv(\"MODEL\"),\n",
+    "        temperature=0.0,\n",
+    "        streaming=False,\n",
+    "        callbacks=[],\n",
+    "        verbose=False,\n",
+    "        timeout=120,\n",
+    "    )\n"
    ]
   },
   {
@@ -101,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "994cf903-1ed6-4ae2-b32a-7891a2808f81",
    "metadata": {},
    "outputs": [],
@@ -111,10 +134,7 @@
     "# Prompts we will use\n",
     "subjects_prompt = \"\"\"Generate a list of 3 sub-topics that are all related to this overall topic: {topic}.\"\"\"\n",
     "joke_prompt = \"\"\"Generate a joke about {subject}\"\"\"\n",
-    "best_joke_prompt = \"\"\"Below are a bunch of jokes about {topic}. Select the best one! Return the ID of the best one, starting 0 as the ID for the first joke. Jokes: \\n\\n  {jokes}\"\"\"\n",
-    "\n",
-    "# LLM\n",
-    "model = ChatOpenAI(model=\"gpt-4o\", temperature=0) "
+    "best_joke_prompt = \"\"\"Below are a bunch of jokes about {topic}. Select the best one! Return the ID of the best one, starting 0 as the ID for the first joke. Jokes: \\n\\n  {jokes}\"\"\"\n"
    ]
   },
   {
@@ -137,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "099218ca-ee78-4291-95a1-87ee61382e3b",
    "metadata": {},
    "outputs": [],
@@ -152,7 +172,7 @@
     "\n",
     "class BestJoke(BaseModel):\n",
     "    id: int\n",
-    "    \n",
+    "\n",
     "class OverallState(TypedDict):\n",
     "    topic: str\n",
     "    subjects: list\n",
@@ -170,14 +190,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "45010efd-ad31-4daa-b77e-aaec79ef0309",
    "metadata": {},
    "outputs": [],
    "source": [
     "def generate_topics(state: OverallState):\n",
     "    prompt = subjects_prompt.format(topic=state[\"topic\"])\n",
-    "    response = model.with_structured_output(Subjects).invoke(prompt)\n",
+    "    response = llm.with_structured_output(Subjects).invoke(prompt)\n",
     "    return {\"subjects\": response.subjects}"
    ]
   },
@@ -226,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "bcddc567-73d3-4fb3-bfc5-1bea538f2aab",
    "metadata": {},
    "outputs": [],
@@ -239,7 +259,7 @@
     "\n",
     "def generate_joke(state: JokeState):\n",
     "    prompt = joke_prompt.format(subject=state[\"subject\"])\n",
-    "    response = model.with_structured_output(Joke).invoke(prompt)\n",
+    "    response = llm.with_structured_output(Joke).invoke(prompt)\n",
     "    return {\"jokes\": [response.joke]}"
    ]
   },
@@ -255,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "8d672870-75e3-4307-bda0-c41a86cbbaff",
    "metadata": {},
    "outputs": [],
@@ -263,7 +283,7 @@
     "def best_joke(state: OverallState):\n",
     "    jokes = \"\\n\\n\".join(state[\"jokes\"])\n",
     "    prompt = best_joke_prompt.format(topic=state[\"topic\"], jokes=jokes)\n",
-    "    response = model.with_structured_output(BestJoke).invoke(prompt)\n",
+    "    response = llm.with_structured_output(BestJoke).invoke(prompt)\n",
     "    return {\"best_selected_joke\": state[\"jokes\"][response.id]}"
    ]
   },
@@ -349,7 +369,7 @@
     "Since the filming of these videos, we've updated Studio so that it can be run locally and opened in your browser. This is now the preferred way to run Studio (rather than using the Desktop App as shown in the video). See documentation [here](https://langchain-ai.github.io/langgraph/concepts/langgraph_studio/#local-development-server) on the local development server and [here](https://langchain-ai.github.io/langgraph/how-tos/local-studio/#run-the-development-server). To start the local development server, run the following command in your terminal in the `/studio` directory in this module:\n",
     "\n",
     "```\n",
-    "langgraph dev\n",
+    "uv run langgraph dev\n",
     "```\n",
     "\n",
     "Yoo should see the following output:\n",
