--- a/module-3/breakpoints.ipynb
+++ b/module-3/breakpoints.ipynb
@@ -45,24 +45,42 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%capture --no-stderr\n",
-    "%pip install --quiet -U langgraph langchain_openai langgraph_sdk"
+    "import os\n",
+    "\n",
+    "os.system(\"azd auth login\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "67d91f7c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os, getpass\n",
+    "import os\n",
+    "from azure.identity import DefaultAzureCredential, get_bearer_token_provider\n",
+    "from langchain_openai import AzureChatOpenAI\n",
+    "from dotenv import load_dotenv\n",
     "\n",
-    "def _set_env(var: str):\n",
-    "    if not os.environ.get(var):\n",
-    "        os.environ[var] = getpass.getpass(f\"{var}: \")\n",
+    "load_dotenv()\n",
     "\n",
-    "_set_env(\"OPENAI_API_KEY\")"
+    "credential = DefaultAzureCredential()\n",
+    "scope = \"https://cognitiveservices.azure.com/.default\"\n",
+    "token_provider = get_bearer_token_provider(credential, scope)\n",
+    "\n",
+    "llm = AzureChatOpenAI(\n",
+    "    azure_endpoint=os.getenv(\"AZURE_ENDPOINT\"),\n",
+    "    azure_deployment=os.getenv(\"AZURE_DEPLOYMENT\"),\n",
+    "    api_version=os.getenv(\"API_VERSION\"),\n",
+    "    azure_ad_token_provider=token_provider,\n",
+    "    openai_api_type=os.getenv(\"OPENAI_API_TYPE\"),\n",
+    "    model=os.getenv(\"MODEL\"),\n",
+    "    temperature=0.0,\n",
+    "    streaming=False,\n",
+    "    callbacks=[],\n",
+    "    verbose=False,\n",
+    "    timeout=120,\n",
+    ")\n"
    ]
   },
   {
@@ -83,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "b94d1a90-2fe3-4b2a-a901-3bdb89e37edc",
    "metadata": {},
    "outputs": [],
@@ -119,13 +137,12 @@
     "    return a / b\n",
     "\n",
     "tools = [add, multiply, divide]\n",
-    "llm = ChatOpenAI(model=\"gpt-4o\")\n",
     "llm_with_tools = llm.bind_tools(tools)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "ac06feae-d12b-490b-95e7-38cf40b74202",
    "metadata": {},
    "outputs": [
@@ -309,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "95a0eb50-66e3-4538-8103-207aae175154",
    "metadata": {},
    "outputs": [
@@ -360,11 +377,11 @@
     "\n",
     "# Check approval\n",
     "if user_approval.lower() == \"yes\":\n",
-    "    \n",
+    "\n",
     "    # If approved, continue the graph execution\n",
     "    for event in graph.stream(None, thread, stream_mode=\"values\"):\n",
     "        event['messages'][-1].pretty_print()\n",
-    "        \n",
+    "\n",
     "else:\n",
     "    print(\"Operation cancelled by user.\")"
    ]
@@ -432,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "de9c5017-3a15-46f6-8edf-3997613da323",
    "metadata": {},
    "outputs": [
@@ -524,7 +541,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "academy",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -538,7 +555,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
