--- a/module-3/edit-state-human-feedback.ipynb
+++ b/module-3/edit-state-human-feedback.ipynb
@@ -39,8 +39,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%capture --no-stderr\n",
-    "%pip install --quiet -U langgraph langchain_openai langgraph_sdk"
+    "import os\n",
+    "\n",
+    "os.system(\"azd auth login\")"
    ]
   },
   {
@@ -50,13 +51,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os, getpass\n",
+    "import os\n",
+    "from azure.identity import DefaultAzureCredential, get_bearer_token_provider\n",
+    "from langchain_openai import AzureChatOpenAI\n",
+    "from dotenv import load_dotenv\n",
     "\n",
-    "def _set_env(var: str):\n",
-    "    if not os.environ.get(var):\n",
-    "        os.environ[var] = getpass.getpass(f\"{var}: \")\n",
+    "load_dotenv()\n",
     "\n",
-    "_set_env(\"OPENAI_API_KEY\")"
+    "credential = DefaultAzureCredential()\n",
+    "scope = \"https://cognitiveservices.azure.com/.default\"\n",
+    "token_provider = get_bearer_token_provider(credential, scope)\n",
+    "\n",
+    "llm = AzureChatOpenAI(\n",
+    "    azure_endpoint=os.getenv(\"AZURE_ENDPOINT\"),\n",
+    "    azure_deployment=os.getenv(\"AZURE_DEPLOYMENT\"),\n",
+    "    api_version=os.getenv(\"API_VERSION\"),\n",
+    "    azure_ad_token_provider=token_provider,\n",
+    "    openai_api_type=os.getenv(\"OPENAI_API_TYPE\"),\n",
+    "    model=os.getenv(\"MODEL\"),\n",
+    "    temperature=0.0,\n",
+    "    streaming=False,\n",
+    "    callbacks=[],\n",
+    "    verbose=False,\n",
+    "    timeout=120,\n",
+    ")\n"
    ]
   },
   {
@@ -77,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "bcf24f05-ac2b-455e-846c-0c50ac86e1f4",
    "metadata": {},
    "outputs": [],
@@ -113,7 +131,7 @@
     "    return a / b\n",
     "\n",
     "tools = [add, multiply, divide]\n",
-    "llm = ChatOpenAI(model=\"gpt-4o\")\n",
+    "\n",
     "llm_with_tools = llm.bind_tools(tools)"
    ]
   },
@@ -856,7 +874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "3fc7bcd6-660c-4a8a-ad8d-e6698dcf6201",
    "metadata": {},
    "outputs": [
@@ -894,7 +912,7 @@
     "# Run the graph until the first interruption\n",
     "for event in graph.stream(initial_input, thread, stream_mode=\"values\"):\n",
     "    event[\"messages\"][-1].pretty_print()\n",
-    "    \n",
+    "\n",
     "# Get user input\n",
     "user_input = input(\"Tell me how you want to update the state: \")\n",
     "\n",
